# CI2024_project-work

./: .gitignore  pyproject.toml  s333971.py
docs/: general_log_20250208_010627.txt  general_log_20250208_012939.txt  general_log_20250208_014317.txt  general_log_20250208_014824.txt  general_log_20250208_020832.txt  general_log_20250208_185311.txt  general_log_20250208_233540.txt
src/: main.py  memetic_config.py  s333971 copy.py  s333971.py
src/core/: safe_math.py  statistics.py  tree.py
src/memetic/: abc.py  crossover.py  evolution.py  hbo.py  local_search.py  mutation.py  selection.py
src/utility/: logger.py  utils.py
